Bug 1959171 - Guard against imbalanced clips in DrawTargetCairo. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D245722